# girp

./: meson.build  org.gnome.Girp.json
data/: meson.build  org.gnome.Girp.appdata.xml.in  org.gnome.Girp.desktop.in  org.gnome.Girp.gschema.xml
demo/: documentation.ui  girp.gresource.xml  girpui-doc.vala  girpui-namespace.vala  girpui-object-details.vala  girpui-object.vala  main.vala  member-row.ui  meson.build  namespace.ui  object-details.ui  object.ui  window.ui  window.vala
po/: POTFILES  meson.build
src/: girp-gir.vala  main.vala  meson.build  window.vala
tests/: Girp.gir  girp-gir-test.vala  girp-performance.vala  meson.build
